# lcd-v2-data

./: Makefile  README.md  environment.yml  pyproject.toml  upload2anaconda.sh
.github/workflows/: ci.yml
scripts/: setup-dev-env.sh
src/lcd_data/: __init__.py  build_lcd_dataset.py  ncei.py  stations.py
