[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcd-data"
version = "1.0.9"
description = "Python toolkit for downloading and processing Local Climatological Data version 2 (LCDv2) data."
readme = "README.md"
requires-python = ">=3.11,<=3.12.9"
license = { file = "LICENSE" }
authors = [{ name = "Jan Kazil" }]
dependencies = [
  "geopandas",
  "matplotlib",
  "numpy",
  "netcdf4",
  "pandas",
  "requests",
  "shapely",
  "timezonefinder",
  "xarray",
]

[project.scripts]
build-lcd-dataset = "lcd_data.build_lcd_dataset:main" # Connects name of executable in $PATH to the python module containing main()

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Ensure non-Python assets ship inside the wheel/sdist
[tool.setuptools.package-data]
lcd_data = [
    "data/EIA/*.geojson",
    "data/CensusBureau/US_states/*",
]

[tool.ruff]
line-length = 128
target-version = "py313"
extend-exclude = [
    "dist",
    "build",
    "data",
    "demos",
    "docs",
    "experiments",
    "notebooks",
    "plots",
    "results",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

#
# MyPy is disabled because static analysis cannot account for all
# dynamic runtime behaviors, mypy may report false positives which
# do no reflect actual runtime issues.
#
#[tool.mypy]
#python_version = "3.11"
#warn_unused_configs = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#no_implicit_optional = true
#check_untyped_defs = true
#strict_optional = true
#pretty = true
#namespace_packages = true
#mypy_path = "src"
#files = ["src/lcd_data", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
